# projects

helloworld/: CMakeLists.txt  helloworld.cpp  main.cpp
helloworld/common/: common_func.cpp  common_func.h
